# Research

./: README.md  doc2md-research.md
doc2md/: README.md  SECURITY_REVIEW.md  pyproject.toml
doc2md/demo/: demo.md
doc2md/src/doc2md/: __init__.py  cli.py  detector.py  scorer.py
doc2md/src/doc2md/ir/: nodes.py
doc2md/src/doc2md/parsers/: base.py  docx.py  pdf.py  xlsx.py
doc2md/src/doc2md/renderers/: markdown.py
doc2md/tests/: create_fixtures.py  test_ir_nodes.py  test_parser_docx.py  test_parser_pdf.py  test_parser_xlsx.py  test_renderer_markdown.py  test_scorer.py
doc2md/tests/fixtures/: sample.docx  sample.xlsx
llm-order-deprioritization-benchmark/: README.md  baseline.py  benchmark.py  generate_dataset.py  orders.csv  prompt.md  score_results.py
llm-order-deprioritization-benchmark/results/: raw.json  summary.csv
llm-picker-behavior-simulation/: README.md  prompt.md  simulate.py
llm-picker-behavior-simulation/results/: baseline_run1.json  baseline_run2.json  baseline_run3.json  llm_run1.json  llm_run2.json  llm_run3.json  summary.json
