[project]
name = "doc2md"
version = "0.1.0"
description = "High-fidelity, MIT-licensed document-to-Markdown converter"
readme = "README.md"
authors = [{ name = "Claude", email = "noreply@anthropic.com" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
pdf  = ["pymupdf>=1.24", "pdfplumber>=0.11", "pytesseract>=0.3"]
docx = ["python-docx>=1.1"]
xlsx = ["openpyxl>=3.1"]
all  = ["doc2md[pdf,docx,xlsx]"]

[project.scripts]
doc2md = "doc2md.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "showboat"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=doc2md --cov-report=term-missing -v"
